fix: on mobile screens or resize for a smaller size, make a content of the content
enable flex wrapping for event rows in styles

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -553,6 +553,7 @@ Features-stack
 ========================================================================== */
 .events .row {
   display: flex;
+  flex-wrap: wrap;
   align-items: stretch;
 }
 
